--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
         </div>
         <div class="skill-section-container">
           <a class="skills-btn" title="Skills Page" href="pages/skills.html"><i class="fas fa-arrow-up-right-from-square"></i></a>
+          
           <div class="skill-section section-1">
             <div class="skill-section-title section-title-1">
               <img src="img/sergi-kabrera-2xU7rYxsTiM-unsplash-min.jpg" loading="lazy" alt="Keyboard">
@@ -216,33 +217,6 @@
                 <li>JQuery</li>
               </ul> -->
               <a href="pages/skills.html#section-2" class="btn btn-light">view skills<i class="fas fa-angles-right"></i></a>
-            </div>
-          </div>
-
-          <div class="skill-section section-3 light-section">
-            <div class="skill-section-title section-title-3">
-              <h3>Version Control &<br>development tools</h3>
-              <img src="img/hugo-barbosa-TnG2q8FtXsg-unsplash-min.jpg" loading="lazy" alt="Keyboard">
-              <p>Tools used to create & <br> manage software code.</p>
-              <!-- <ul>
-                <li>Git & GitHub</li>
-                <li>Node-JS</li>
-                <li>Visual Studio Code</li>
-              </ul> -->
-              <a href="pages/skills.html#section-3" class="btn btn-dark">view skills<i class="fas fa-angles-right"></i></a>
-            </div>
-          </div>
-
-          <div class="skill-section section-4 light-section">
-            <div class="skill-section-title section-title-4">
-              <img src="img/liana-mikah-sK1nYjXcXCY-unsplash-min.jpg" loading="lazy" alt="Keyboard">
-              <h3>Interpersonal & <br> Soft Skills</h3>
-              <p>Communication, creativity, <br> interaction & team work.</p>
-              <!-- <ul>
-                <li>Customer Care</li>
-                <li>Creativity</li>
-              </ul> -->
-              <a href="pages/skills.html#section-4" class="btn btn-dark">view skills<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
 
@@ -354,6 +328,37 @@
       </div>
     </div>
   </section>
+  <div class="skill-section-container">
+    <a class="skills-btn" title="Skills Page" href="pages/skills.html"><i class="fas fa-arrow-up-right-from-square"></i></a>
+    
+    <div class="skill-section section-3 light-section">
+      <div class="skill-section-title section-title-3">
+        <h3>Version Control &<br>development tools</h3>
+        <img src="img/hugo-barbosa-TnG2q8FtXsg-unsplash-min.jpg" loading="lazy" alt="Keyboard">
+        <p>Tools used to create & <br> manage software code.</p>
+        <!-- <ul>
+          <li>Git & GitHub</li>
+          <li>Node-JS</li>
+          <li>Visual Studio Code</li>
+        </ul> -->
+        <a href="pages/skills.html#section-3" class="btn btn-dark">view skills<i class="fas fa-angles-right"></i></a>
+      </div>
+    </div>
+
+    <div class="skill-section section-4 light-section">
+      <div class="skill-section-title section-title-4">
+        <img src="img/liana-mikah-sK1nYjXcXCY-unsplash-min.jpg" loading="lazy" alt="Keyboard">
+        <h3>Interpersonal & <br> Soft Skills</h3>
+        <p>Communication, creativity, <br> interaction & team work.</p>
+        <!-- <ul>
+          <li>Customer Care</li>
+          <li>Creativity</li>
+        </ul> -->
+        <a href="pages/skills.html#section-4" class="btn btn-dark">view skills<i class="fas fa-angles-right"></i></a>
+      </div>
+    </div>
+
+  </div>
   <!-- ABOUT SECTION-->
   <section class="link-section" id="about">
     <div id="about-target" class="about container">
