--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
           <div class="item-flex-container">
             <div class="item-content">
               <figure class="item-image">
-                <img src="img/munch-up-desk.png" alt="Munch Up logo">
+                <img src="img/munch-desk-2.png" alt="Munch Up logo">
               </figure>
             </div>
             <div class="item-header">
