skill section borders

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           </div>
         </div>
         <!-- SKILLS MENU CONTAINER -->
-        <div class="skill-section-container">
+        <div class="skill-section-container border">
           <a class="skills-btn" title="Skills Page" href="pages/skills.html"><i class="fas fa-arrow-up-right-from-square"></i></a>
           
           <div class="skill-section section-1">
@@ -198,11 +198,11 @@
               <img src="img/sergi-kabrera-2xU7rYxsTiM-unsplash-min.jpg" loading="lazy" alt="Keyboard">
               <h3>web accessibility & <br> responsive web design</h3>
               <p>User friendly websites <br> that adapt to all devices.</p>
-              <!-- <ul>
+              <ul>
                 <li>HTML-5</li>
                 <li>CSS-3</li>
                 <li>Javascript</li>
-              </ul> -->
+              </ul>
               <a href="pages/skills.html#section-1" class="btn btn-light">view skills<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
@@ -330,7 +330,7 @@
     </div>
   </section>
   <!-- SKILLS MENU CONTAINER -->
-  <div class="skill-section-container">
+  <div class="skill-section-container border border-dark">
     <a class="skills-btn" title="Skills Page" href="pages/skills.html"><i class="fas fa-arrow-up-right-from-square"></i></a>
 
     <div class="skill-section section-3 light-section">
