--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           </div>
         </div>
         <!-- SKILLS MENU CONTAINER -->
-        <div class="skill-section-container border">
+        <div class="skill-section-container">
           <a class="skills-btn" title="Skills Page" href="pages/skills.html"><i class="fas fa-arrow-up-right-from-square"></i></a>
           
           <div class="skill-section section-1">
@@ -212,11 +212,11 @@
               <img src="img/martin-katler-o9XN28KdyN8-unsplash-min.jpg" loading="lazy" alt="Keyboard">
               <h3>immersive Interface &<br>Engaging Experience</h3>
               <p>appealing user interface & <br>interactive user experience</p>
-              <!-- <ul>
+              <ul>
                 <li>Sass</li>
                 <li>React-JS</li>
                 <li>JQuery</li>
-              </ul> -->
+              </ul>
               <a href="pages/work.html" class="btn btn-light">view projects<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
@@ -330,7 +330,7 @@
     </div>
   </section>
   <!-- SKILLS MENU CONTAINER -->
-  <div class="skill-section-container border border-dark">
+  <div class="skill-section-container">
     <a class="skills-btn" title="Skills Page" href="pages/skills.html"><i class="fas fa-arrow-up-right-from-square"></i></a>
 
     <div class="skill-section section-3 light-section">
@@ -338,11 +338,11 @@
         <h3>Version Control &<br>development tools</h3>
         <img src="img/hugo-barbosa-TnG2q8FtXsg-unsplash-min.jpg" loading="lazy" alt="Keyboard">
         <p>Tools used to create & <br> manage software code.</p>
-        <!-- <ul>
+        <ul>
           <li>Git & GitHub</li>
           <li>Node-JS</li>
           <li>Visual Studio Code</li>
-        </ul> -->
+        </ul>
         <a href="pages/skills.html#section-3" class="btn btn-dark">view skills<i class="fas fa-angles-right"></i></a>
       </div>
     </div>
