--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <div class="item-flex-container">
             <div class="item-content">
               <figure class="item-image">
-                <img src="img/orich-desktop.png" alt="Orich Trading & Projects logo">
+                <img src="img/orich-dekstop-hero.png" alt="Orich Trading & Projects logo">
               </figure>
             </div>
             <div class="item-header">
@@ -273,7 +273,7 @@
           <div class="item-flex-container">
             <div class="item-content">
               <figure class="item-image">
-                <img src="img/munch-desk-2.png" alt="Munch Up logo">
+                <img src="img/munch-desktop-hero.png" alt="Munch Up logo">
               </figure>
             </div>
             <div class="item-header">
