--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
@@ -236,6 +236,7 @@
         <h2 data-text="projects" class="section-title io-item io-item">pro<span>j</span>ects</h2>
       </div>
       <div class="work-container">
+
         <!-- ORICH -->
         <div class="item io-item">
           <!-- FLEX: TITLE + CONTENT -->
@@ -438,9 +439,10 @@
           Contact<span>Info</span></h2>
       </div>
       <div class="contact-items">
+        
         <!-- EMAIL ITEM -->
         <article title="Email Info" class="contact-item io-item">
-          <div class="title">
+          <div class="title" data-info="email">
             <i class="fas fa-envelope"></i>
             <h3>Email address</h3>
           </div>
@@ -451,9 +453,10 @@
             </a>
           </div>
         </article>
+
         <!-- WHATSAPP NUMBER -->
         <article title="WhatsApp Number" class="contact-item io-item">
-          <div class="title">
+          <div class="title" data-info="text">
               <i class="fa-brands fa-whatsapp"></i>
               <h3>whatsApp</h3>
           </div>
@@ -463,9 +466,10 @@
                 class="fa-solid fa-comment-dots"></i></a>
           </div>
         </article>
+
         <!-- PHONE NUMBER -->
-        <article title="Phone Number" class="contact-item io-item">
-          <div class="title">
+        <article title="Phone Number"  class="contact-item io-item">
+          <div class="title" data-info="call">
             <i class="fas fa-phone-alt"></i>
             <h3>phone number</h3>
           </div>
@@ -474,6 +478,7 @@
             <a href="tel:+27726005104" class="btn btn-primary" title="Call me">call now<i class="fas fa-phone-volume"></i></a>
           </div>
         </article>
+
       </div>
     </div>
     <!-- end of padding section -->
