--- a/pages/skills.html
+++ b/pages/skills.html
@@ -463,51 +463,50 @@
           <h2 title="contact information" data-text="contactinfo" class="section-title io-item io-item">
             Contact<span>Info</span></h2>
         </div>
+
         <div class="contact-items">
+        
           <!-- EMAIL ITEM -->
           <article title="Email Info" class="contact-item io-item">
-            <div class="title">
-              <h3>Email</h3>
-              <div class="icon">
-                <i class="fas fa-envelope"></i></div>
+            <div class="title" data-info="email">
+              <i class="fas fa-envelope"></i>
+              <h3>Email address</h3>
             </div>
             <div class="contact-info">
-              <h4>Email address</h4>
               <p>bshakex@gmail.com</p>
-              <a href="mailto:bshakex@gmail.com" title="Email me">send email<i class="fas fa-at"></i>
+              <a href="mailto:bshakex@gmail.com" class="btn btn-primary" title="Email me">send email<i
+                  class="fas fa-at"></i>
               </a>
             </div>
           </article>
+  
           <!-- WHATSAPP NUMBER -->
           <article title="WhatsApp Number" class="contact-item io-item">
-            <div class="title">
-              <h3>WhatsApp</h3>
-              <div class="icon">
+            <div class="title" data-info="text">
                 <i class="fa-brands fa-whatsapp"></i>
-              </div>
+                <h3>whatsApp</h3>
             </div>
             <div id="whatsapp" class="contact-info">
-              <h4>whatsApp contact</h4>
               <p>+27716876941</p>
-              <a href="https://wa.me/+27716876941" target="_blank" title="WhatsApp text me">send text<i
+              <a href="https://wa.me/+27716876941" class="btn btn-primary" target="_blank" title="WhatsApp">send text<i
                   class="fa-solid fa-comment-dots"></i></a>
             </div>
           </article>
+  
           <!-- PHONE NUMBER -->
-          <article title="Phone Number" class="contact-item io-item">
-            <div class="title">
-              <h3>Phone</h3>
-              <div class="icon">
-                <i class="fas fa-phone-alt"></i>
-              </div>
+          <article title="Phone Number"  class="contact-item io-item">
+            <div class="title" data-info="call">
+              <i class="fas fa-phone-alt"></i>
+              <h3>phone number</h3>
             </div>
             <div id="phone" class="contact-info">
-              <h4>phone number</h4>
               <p>+27 72 600 5104</p>
-              <a href="tel:+27726005104" title="Call me">call now<i class="fas fa-phone-volume"></i></a>
+              <a href="tel:+27726005104" class="btn btn-primary" title="Call me">call now<i class="fas fa-phone-volume"></i></a>
             </div>
           </article>
+  
         </div>
+      
       </div>
       <!-- end of padding section -->
     </section>
