--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
 <body>
   <!-- LOADER -->
-  <div class="loader_bg">
+  <!-- <div class="loader_bg">
     <div class="spinner">
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div>
+  </div> -->
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
@@ -206,22 +206,6 @@
               <a href="pages/skills.html#section-1" class="btn btn-light">view skills<i class="fas fa-angles-right"></i></a>
             </div>
           </div>
-          
-          <div class="skill-section section-2">
-          
-            <div class="skill-section-title section-title-2">
-              <img src="img/martin-katler-o9XN28KdyN8-unsplash-min.jpg" loading="lazy" alt="Keyboard">
-              <h3>immersive Interface &<br>Engaging Experience</h3>
-              <p>appealing user interface & <br>interactive user experience</p>
-              <!-- <ul>
-                <li>Sass</li>
-                <li>React-JS</li>
-                <li>JQuery</li>
-              </ul> -->
-              <a href="pages/work.html" class="btn btn-light">view projects<i class="fas fa-angles-right"></i></a>
-            </div>
-
-          </div>
 
         </div>
       </div>
@@ -331,43 +315,27 @@
 
       </div>
     </div>
+    <!-- SKILLS MENU CONTAINER -->
+    <div class="skill-section-container">
+      <div class="skill-section section-2">
+
+        <div class="skill-section-title section-title-2">
+          <img src="img/martin-katler-o9XN28KdyN8-unsplash-min.jpg" loading="lazy" alt="Keyboard">
+          <h3>immersive Interface &<br>Engaging Experience</h3>
+          <p>appealing user interface & <br>interactive user experience</p>
+          <!-- <ul>
+            <li>Sass</li>
+            <li>React-JS</li>
+            <li>JQuery</li>
+          </ul> -->
+          <a href="pages/work.html" class="btn btn-light">view projects<i class="fas fa-angles-right"></i></a>
+        </div>
+
+      </div>
+
+    </div>
   </section>
-  <!-- SKILLS MENU CONTAINER -->
-  <div class="skill-section-container">
-    <a class="skills-btn" title="Skills Page" href="pages/skills.html"><i class="fas fa-arrow-up-right-from-square"></i></a>
-
-    <div class="skill-section section-3 light-section">
-
-      <div class="skill-section-title section-title-3">
-        <h3>Version Control &<br>development tools</h3>
-        <img src="img/hugo-barbosa-TnG2q8FtXsg-unsplash-min.jpg" loading="lazy" alt="Keyboard">
-        <p>Tools used to create & <br> manage software code.</p>
-        <!-- <ul>
-          <li>Git & GitHub</li>
-          <li>Node-JS</li>
-          <li>Visual Studio Code</li>
-        </ul> -->
-        <a href="pages/skills.html#section-3" class="btn btn-dark">view skills<i class="fas fa-angles-right"></i></a>
-      </div>
-
-    </div>
-
-    <div class="skill-section section-4 light-section">
-
-      <div class="skill-section-title section-title-4">
-        <img src="img/liana-mikah-sK1nYjXcXCY-unsplash-min.jpg" loading="lazy" alt="Keyboard">
-        <h3>Interpersonal & <br> Soft Skills</h3>
-        <p>Communication, creativity, <br> interaction & team work.</p>
-        <!-- <ul>
-          <li>Customer Care</li>
-          <li>Creativity</li>
-        </ul> -->
-        <a href="pages/about.html" class="btn btn-dark">about me<i class="fas fa-angles-right"></i></a>
-      </div>
-
-    </div>
-
-  </div>
+  
   <!-- ABOUT SECTION-->
   <section class="link-section" id="about">
     <div id="about-target" class="about container">
@@ -430,6 +398,27 @@
       </div>
     </div>
   </section>
+<!-- SKILLS MENU CONTAINER -->
+<div class="skill-section-container">
+  <a class="skills-btn" title="Skills Page" href="pages/skills.html"><i class="fas fa-arrow-up-right-from-square"></i></a>
+
+
+  <div class="skill-section section-4 light-section">
+
+    <div class="skill-section-title section-title-4">
+      <img src="img/liana-mikah-sK1nYjXcXCY-unsplash-min.jpg" loading="lazy" alt="Keyboard">
+      <h3>Interpersonal & <br> Soft Skills</h3>
+      <p>Communication, creativity, <br> interaction & team work.</p>
+      <!-- <ul>
+        <li>Customer Care</li>
+        <li>Creativity</li>
+      </ul> -->
+      <a href="pages/about.html" class="btn btn-dark">about me<i class="fas fa-angles-right"></i></a>
+    </div>
+
+  </div>
+
+</div>
   <!-- CONTACT SECTION-->
   <section class="link-section" id="contact">
     <div class="contact container">
@@ -496,6 +485,26 @@
       </div>
     </div>
   </section>
+  <div class="skill-section-container">
+    <a class="skills-btn" title="Skills Page" href="pages/skills.html"><i class="fas fa-arrow-up-right-from-square"></i></a>
+  
+    <div class="skill-section section-3 light-section">
+  
+      <div class="skill-section-title section-title-3">
+        <h3>Version Control &<br>development tools</h3>
+        <img src="img/hugo-barbosa-TnG2q8FtXsg-unsplash-min.jpg" loading="lazy" alt="Keyboard">
+        <p>Tools used to create & <br> manage software code.</p>
+        <!-- <ul>
+          <li>Git & GitHub</li>
+          <li>Node-JS</li>
+          <li>Visual Studio Code</li>
+        </ul> -->
+        <a href="pages/skills.html#section-3" class="btn btn-dark">view skills<i class="fas fa-angles-right"></i></a>
+      </div>
+  
+    </div>
+  
+  </div>
   <!-- FOOTER -->
   <section class="link-section" id="footer">
     <div class="footer ">
