--- a/index.html
+++ b/index.html
@@ -158,6 +158,13 @@
             </div>
         </div>
       </div>
+      <picture class="hero-image">
+        <source
+          srcset="/img/hero-xlg.jpg"
+          media="(min-width: 820px)"
+        >
+        <img src="img/hero-sm-min.jpg" alt="Laptop">
+      </picture>
     </div>
   </section>
   <!-- END OF HERO-->
