--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           
           <div class="skill-section section-1">
             <div class="skill-section-title section-title-1">
-              <img src="img/sergi-kabrera-2xU7rYxsTiM-unsplash-min.jpg" loading="lazy" alt="Keyboard">
+              <img src="img/keyboard.jpg" loading="lazy" alt="Keyboard">
               <h3>web accessibility & <br> responsive web design</h3>
               <p>User friendly websites <br> that adapt to all devices.</p>
               <!-- <ul>
@@ -413,7 +413,7 @@
   <div class="skill-section section-4 light-section">
 
     <div class="skill-section-title section-title-4">
-      <img src="img/liana-mikah-sK1nYjXcXCY-unsplash-min.jpg" loading="lazy" alt="Keyboard">
+      <img src="img/laptop-coffee.jpg" loading="lazy" alt="Keyboard">
       <h3>Interpersonal & <br> Soft Skills</h3>
       <p>Communication, creativity, <br> interaction & team work.</p>
       <!-- <ul>
@@ -492,14 +492,16 @@
       </div>
     </div>
   </section>
+  <!-- SKILLS MENU CONTAINER -->
   <div class="skill-section-container">
-    <a class="skills-btn" title="Skills Page" href="pages/skills.html"><i class="fas fa-arrow-up-right-from-square"></i></a>
-  
+    <a class="skills-btn" title="Skills Page" href="pages/skills.html"><i
+        class="fas fa-arrow-up-right-from-square"></i></a>
+
     <div class="skill-section section-3 light-section">
-  
+
       <div class="skill-section-title section-title-3">
         <h3>Version Control &<br>development tools</h3>
-        <img src="img/hugo-barbosa-TnG2q8FtXsg-unsplash-min.jpg" loading="lazy" alt="Keyboard">
+        <img src="img/keyboard-mouse.jpg" loading="lazy" alt="Keyboard & Mouse">
         <p>Tools used to create & <br> manage software code.</p>
         <!-- <ul>
           <li>Git & GitHub</li>
@@ -508,9 +510,9 @@
         </ul> -->
         <a href="pages/skills.html#section-3" class="btn btn-dark">view skills<i class="fas fa-angles-right"></i></a>
       </div>
-  
+
     </div>
-  
+
   </div>
   <!-- FOOTER -->
   <section class="link-section" id="footer">
