--- a/pages/skills.html
+++ b/pages/skills.html
@@ -241,7 +241,7 @@
                   <li>Javascript</li>
                 </ul> -->
                 <!-- <img src="../img/trevor-cole-zMEzuZlmIQY-unsplash.jpg" loading="lazy" alt="Keyboard"> -->
-                <img src="../img/sergi-kabrera-2xU7rYxsTiM-unsplash-min.jpg" loading="lazy" alt="Keyboard">
+                <img src="../img/keyboard.jpg" loading="lazy" alt="Keyboard">
               </div>
               <div class="skill-section-content">
 
@@ -340,7 +340,7 @@
                   <li>Node-JS</li>
                   <li>Visual Studio Code</li>
                 </ul> -->
-                <img src="../img/hugo-barbosa-TnG2q8FtXsg-unsplash-min.jpg" loading="lazy" alt="Keyboard">
+                <img src="../img/keyboard-mouse.jpg" loading="lazy" alt="Keyboard">
               </div>
               <div class="skill-section-content">
 
@@ -418,7 +418,7 @@
                   <li>Customer Care</li>
                   <li>Creativity</li>
                 </ul> -->
-                <img src="../img/liana-mikah-sK1nYjXcXCY-unsplash-min.jpg" loading="lazy" alt="Keyboard">
+                <img src="../img/laptop-coffee.jpg" loading="lazy" alt="Keyboard">
               </div>
               <div class="skill-section-content">
 
