pahe heros and optimized images

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
           <div class="item-flex-container">
             <div class="item-content">
               <figure class="item-image">
-                <img src="img/munch-desktop-hero.png" alt="Munch Up logo">
+                <img src="img/munch-desk-min.png" alt="Munch Up logo">
               </figure>
             </div>
             <div class="item-header">
@@ -293,7 +293,7 @@
           <div class="item-flex-container">
             <div class="item-content">
               <figure class="item-image">
-                <img src="img/hlavutelo-desktop.png" alt="Orich Trading & Projects logo">
+                <img src="img/hlavutelo-desktop-min.png" alt="Orich Trading & Projects logo">
               </figure>
             </div>
             <div class="item-header">
@@ -327,7 +327,7 @@
       <div class="skill-section section-2">
 
         <div class="skill-section-title section-title-2">
-          <img src="img/martin-katler-o9XN28KdyN8-unsplash-min.jpg" loading="lazy" alt="Keyboard">
+          <img src="img/laptop-2.jpg" loading="lazy" alt="Keyboard">
           <h3>immersive Interface &<br>Engaging Experience</h3>
           <p>appealing user interface & <br>interactive user experience</p>
           <!-- <ul>
