--- a/pages/skills.html
+++ b/pages/skills.html
@@ -152,6 +152,13 @@
             </div>
         </div>
       </div>
+      <picture class="hero-image">
+        <source
+          srcset="/img/hero-xlg.jpg"
+          media="(min-width: 820px)"
+        >
+        <img src="../img/hero-sm-min.jpg" alt="Laptop">
+      </picture>
     </div>
   </section>
   <!-- END OF HERO-->
@@ -290,7 +297,7 @@
               <div class="skill-section-title section-title-2">
                 <h3>immersive Interface &<br>Engaging Experience</h3>
                 <p>appealing user interface & <br>interactive user experience</p>
-                <img src="../img/martin-katler-o9XN28KdyN8-unsplash-min.jpg" loading="lazy" alt="Keyboard">
+                <img src="../img/laptop-2.jpg" loading="lazy" alt="Keyboard">
               </div>
               <div class="skill-section-content">
 
