hero-image inline style

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           srcset="/img/hero-xlg.jpg"
           media="(min-width: 820px)"
         >
-        <img src="img/hero-sm-min.jpg" alt="Laptop">
+        <img src="img/hero-sm-min.jpg" style="width: 820px;" alt="Laptop">
       </picture>
     </div>
   </section>
