--- a/index.html
+++ b/index.html
@@ -162,8 +162,10 @@
         <source
           srcset="/img/hero-xlg.jpg"
           media="(min-width: 820px)"
+          width="1600"
+          height="500"
         >
-        <img src="img/hero-sm-min.jpg" style="width: 820px;" alt="Laptop">
+        <img src="img/hero-sm-min.jpg" width="800" height="1200" alt="Laptop">
       </picture>
     </div>
   </section>
