--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
   <script src="js/projects.js" defer></script>
   <script src="js/app.js" defer></script>
 
+  <link rel="preload" href="img/hero_450.jpg" as="image" media="(max-width: 400px)">
+  <link rel="preload" href="img/hero_1900.jpg" as="image" media="(min-width: 450.1px)">
+
 </head>
 
 <body>
@@ -160,12 +163,12 @@
       </div>
       <picture class="hero-image">
         <source
-          srcset="/img/hero-xlg.jpg"
+          srcset="/img/hero_1900.jpg"
           media="(min-width: 820px)"
-          width="1600"
-          height="500"
+          width="1900"
+          height="1359"
         >
-        <img src="img/hero-sm-min.jpg" width="800" height="1200" alt="Laptop">
+        <img src="img/hero_450.jpg" width="450" height="318" alt="Laptop">
       </picture>
     </div>
   </section>
