--- a/index.html
+++ b/index.html
@@ -239,7 +239,15 @@
           <div class="item-flex-container">
             <div class="item-content">
               <figure class="item-image">
-                <img src="img/orich-dekstop-hero.png" alt="Orich Trading & Projects logo">
+                <picture>
+                  <source
+                  srcset="img/orich_650.png"
+                  media="(min-width: 450px)"
+                  width="650"
+                  height="297"
+                  >
+                  <img src="img/orich_350.png" width="350" height="160" alt="Orich Trading & Projects logo">
+                </picture>
               </figure>
             </div>
             <div class="item-header">
@@ -270,7 +278,15 @@
           <div class="item-flex-container">
             <div class="item-content">
               <figure class="item-image">
-                <img src="img/munch-desk-min.png" alt="Munch Up logo">
+                <picture>
+                  <source
+                  media="(min-width: 450px)"
+                  srcset="img/munch_650.png"
+                  width="650"
+                  height="355"
+                  >
+                  <img src="img/munch_350.png" width="350" height="191" alt="Munch Up logo">
+                </picture>
               </figure>
             </div>
             <div class="item-header">
@@ -298,7 +314,15 @@
           <div class="item-flex-container">
             <div class="item-content">
               <figure class="item-image">
-                <img src="img/hlavutelo-desktop-min.png" alt="Orich Trading & Projects logo">
+                <picture>
+                  <source
+                  media="(min-width: 450px)"
+                  srcset="/img/hlavutelo_600.png"
+                  width="600"
+                  height="274"
+                  >
+                  <img src="img/hlavutelo_350.png" width="350" height="159" alt="Hlavutelo Trading & projects">
+                </picture>
               </figure>
             </div>
             <div class="item-header">
