--- a/thanks.html
+++ b/thanks.html
@@ -45,117 +45,74 @@
             </nav>
         </div>
     </header>
-    <!--HERO-->
-    <section id="thanks" data-hero class="section welcome-section">
-        <div class="hero">
-            <div id="hero-content">
-                <div class="hero-title">
-                    <p>Your email has been received</p>
-                    <h1>
-                        Thank you!
-                    </h1>
-                    <p>I will be in touch shortly..</p>
-                    <a href="index.html" class="home-link"><i class="fas fa-house"></i>Homepage</a>
-                </div>
-                <a href="#main" type="button" title="Shakex Sempe: Web Developer" id="cta-header" class="scroll-link">
-                    <span style="--i:1;">S</span>
-                    <span style="--i:2;">h</span>
-                    <span style="--i:3;">a</span>
-                    <span style="--i:4;">k</span>
-                    <span style="--i:5;">e</span>
-                    <span style="--i:6;">x</span>
-                </a>
-            </div>
 
+    <!--HERO-->
+    <section id="home" data-hero class="banner index-banner">
+        <div class="hero">
+            <div class="hero-index-content">
+                <div class="content-title">
+                    <h2>Thank you!</h2>
+                </div>
+                <div class="content-value">
+                    <p style="text-transform: none;">I will be contact soon..</p>
+                    <div class="cta">
+                        <a href="#main" class="btn">homepage<i class="fa-solid fa-angles-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <picture class="hero-image">
+                <source srcset="/img/hero_1900.jpg" media="(min-width: 820px)" width="1900" height="1359">
+                <img src="img/hero_450.jpg" width="450" height="318" alt="Laptop">
+            </picture>
         </div>
     </section>
-    <!-- END OF HERO-->
-    <!--  END OF MENU -->
-    <main id="main" data-main>
+
+    <main id="main">
 
         <!-- FOOTER -->
         <section class="link-section" id="footer">
-            <div class="footer container">
+            <div class="footer ">
+                <!-- BOTTOM FOOTER -->
+                <div id="footer-bottom" class="footer-bottom">
+                    <img src="img/shakex-sempe-logo.png" loading="lazy" alt="Shakex Sempe Web Developer logo">
 
-                <!-- SOCIAL MEDIA LINKS -->
-                <div class="socialMedia-links">
-                    <h2 data-scroll title="social media links" class="footer-section-title">my links</h2>
-                    <div class="links-grid">
-                        <!-- LINKEDIN -->
-                        <div class="socialMedia-item io-item linkedin">
-                            <!-- <i class="fas fa-link link-icon"></i> -->
-                            <p class="link-icon">linkedin</p>
-                            <i class="fab fa-linkedin-in bg-i"></i>
-                            <a href="https://www.linkedin.com/in/boitumelo-sempe-525b2baa/" title="linkedin"
-                                data-icon="linkedin" target="_blank">
-                                <i class="fab fa-linkedin-in"></i>boitumelo Sempe
-                            </a>
-                        </div>
-                        <!-- GIT-HUB -->
-                        <div class="socialMedia-item io-item github">
-                            <i class="fab fa-github bg-i"></i>
-                            <p class="link-icon">github</p>
-                            <a href="https://github.com/ShakexSempe" title="github" data-icon="github" target="_blank">
-                                <i class="fab fa-github"></i>ShakexSempe
-                            </a>
-                        </div>
-                        <!-- CODE-PEN-->
-                        <div class="socialMedia-item io-item codepen">
-                            <i class="fab fa-codepen bg-i"></i>
-                            <p class="link-icon">codePen</p>
-                            <a href="https://codepen.io/bSempe" title="freeCodecamp" data-icon="codepen"
-                                target="_blank">
-                                <i class="fab fa-codepen"></i>@bsempe
-                            </a>
-                        </div>
-                        <!-- FREE CODE CAMP -->
-                        <div class="socialMedia-item io-item fcc">
-                            <i class="fab fa-free-code-camp bg-i"></i>
-                            <p class="link-icon">freeCodeCamp</p>
-                            <a href="https://www.freecodecamp.org/boitumelo-sempe" title="freeCodecamp" data-icon="FCC"
-                                target="_blank">
-                                <i class="fab fa-free-code-camp"></i>boitumelo sempe
-                            </a>
-                        </div>
-                        <!-- FRONT-END-MENTOR -->
-                        <div class="socialMedia-item io-item fem">
-                            <i class="fas fa-anchor bg-i"></i>
-                            <p class="link-icon">front-end-mentor</p>
-                            <a href="https://www.frontendmentor.io/profile/ShakexSempe" title="font-end-mentor"
-                                data-icon="FCC" target="_blank">
-                                <i class="fas fa-anchor"></i>@ShakexSempe
-                            </a>
-                        </div>
-                        <!-- TWITTER -->
-                        <div class="socialMedia-item io-item twitter">
-                            <i class="fab fa-twitter bg-i"></i>
-                            <p class="link-icon">twitter</p>
-                            <a href="https://twitter.com/Shake_x11" title="twitter" data-icon="twitter" target="_blank">
-                                <i class="fab fa-twitter"></i>@shake_x11
-                            </a>
-                        </div>
+                    <div class="footer-item">
+                        <h3>all rights reserved</h3>
+                        <p>copyright&copy; Boitumelo Sempe</p>
+                        <p>Mahikeng, South Africa</p>
+                        <span class="date"></span>
+                    </div>
+                    <div class="footer-item">
+                        <h3>browse website</h3>
+                        <ul class="footer-list browse-list">
+                            <li><a href="#">home</a></li>
+                            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="pages/about.html">about</a>
+                            </li>
+                            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="pages/skills.html">skills</a>
+                            </li>
+                            <li><i class="fas fa-arrow-up-right-from-square"></i><a href="pages/work.html">projects</a>
+                            </li>
+                            <!-- <li><i class="fas fa-arrow-up-right-from-square"></i><a href="#projects">portfolio</a></li> -->
+                        </ul>
+                    </div>
+                    <div class="footer-item">
+                        <h3>contact details</h3>
+                        <ul class="footer-list contact-list">
+                            <li><i class="fas fa-envelope"></i><a href="mailto:bshakex@gmail.com">bshakex@gmail.com</a>
+                            </li>
+                            <li><i class="fas fa-phone"></i><a href="tel:0726005104">072 600 5104</a></li>
+                            <li><i class="fab fa-whatsapp"></i><a href="https://wa.me/+27716876941">071 687 6941</a>
+                            </li>
+                            <li><i class="fa-solid fa-location-dot"></i><a>Mahikeng, South Africa</a></li>
+                        </ul>
                     </div>
 
-                </div>
-                <!-- end of contact form -->
-                <!-- padding section -->
-                <div id="footer-logo" class="section-pad pad-logo">
-                    <figure>
-                        <a title="shakex sempe: web developer" href="#footer">
-                            <img src="img/shakex-sempe-logo.png" loading="lazy" alt="Shakex Sempe logo">
-                        </a>
-                    </figure>
-                </div>
-                <div data-scroll class="bs21">
-                    <p>copyright&copy; Boitumelo Sempe</p>
-                    <p>Mahikeng, South Africa</p>
-                    <a title="Shakex Sempe" href="https://shakexsempe.github.io/box-shadow/" target="_blank">box
-                        shadow</a>
-                    <span class="date"></span>
+                    <!-- <div data-scroll class="bs21">
+          <a title="Shakex Sempe" href="https://shakexsempe.github.io/box-shadow/" target="_blank">box shadow</a>
+        </div> -->
                 </div>
             </div>
         </section>
-        <!-- END OF FOOTER-->
     </main>
 
     <!-- date -->
