--- a/index.html
+++ b/index.html
@@ -49,6 +49,22 @@
   <link rel="preload" href="img/hero_450.jpg" as="image" media="(max-width: 400px)">
   <link rel="preload" href="img/hero_1900.jpg" as="image" media="(min-width: 450.1px)">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500&family=Montserrat:wght@200;500;700&display=swap"
+    rel="stylesheet">
+
+  <!-- STYLES -->
+  <style>
+    html {
+      font-family: 'Montserrat', sans-serif;
+    }
+
+
+
+
+  </style>
 </head>
 
 <body>
@@ -157,7 +173,7 @@
           <p>Accessible, Immersive & Engaging <br>
             <span>responsive web design</span></p>
             <div class="cta">
-              <a href="#main" class="btn">get started<i class="fa-solid fa-angles-right"></i></a>
+              <a href="#main" id="hero-cta" class="btn">get started<i class="fa-solid fa-angles-right"></i></a>
             </div>
         </div>
       </div>
