--- a/index.html
+++ b/index.html
@@ -61,9 +61,6 @@
       font-family: 'Montserrat', sans-serif;
     }
 
-
-
-
   </style>
 </head>
 
@@ -445,7 +442,8 @@
       </div>
       <div class="col-left">
         <figure class="about-img animated-img">
-          <img src="img/me-min.jpg" loading="lazy" alt="Boitumelo Shakex Sempe">
+          <img class="about-img-1" src="img/me-min.jpg" width="450px" height="600" loading="lazy" alt="Boitumelo Shakex Sempe">
+          <img class="about-img-2" src="img/shakexblue-min.jpg" width="450px" height="600" loading="lazy" alt="Boitumelo Shakex Sempe">
         </figure>
       </div>
     </div>
