--- a/pages/skills.html
+++ b/pages/skills.html
@@ -154,10 +154,12 @@
       </div>
       <picture class="hero-image">
         <source
-          srcset="/img/hero-xlg.jpg"
+          srcset="../img/hero_1900.jpg"
           media="(min-width: 820px)"
+          width="1900"
+          height="1359"
         >
-        <img src="../img/hero-sm-min.jpg" alt="Laptop">
+        <img src="../img/hero_450.jpg" width="450" height="318" alt="Laptop">
       </picture>
     </div>
   </section>
