--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
       </picture>
     </div>
   </section>
-  <!-- END OF HERO-->
-  <!--  END OF MENU -->
+  <!-- MAIN -->
   <main id="main" data-main>
   <!-- SKILLS SECTION-->
   <section class="skills-section link-section" id="skills">
