--- a/pages/work.html
+++ b/pages/work.html
@@ -173,7 +173,7 @@
                     <div class="item-flex-container">
                         <div class="item-content">
                             <figure class="item-image">
-                                <img src="../img/orich-desktop.png" alt="Orich Trading & Projects logo">
+                                <img src="../img/orich-hero.png" width="500" height="228" alt="Orich Trading & Projects logo">
                             </figure>
                         </div>
                         <div class="item-header">
@@ -205,7 +205,7 @@
                     <div class="item-flex-container">
                         <div class="item-content">
                             <figure class="item-image">
-                                <img src="../img/hlavutelo-desktop.png" alt="Orich Trading & Projects logo">
+                                <img src="../img/hlavutelo_600.png" width="600" height="274" alt="Orich Trading & Projects logo">
                             </figure>
                         </div>
                         <div class="item-header">
@@ -233,33 +233,8 @@
             </div>
         </div>
     </section>
-        <!-- CUBE -->
-        <!-- <div id="cube" class="cube-container">
-            <div class="scene io-item">
-                <div class="floor"></div>
-                <div class="cube io-item">
-                    <div class="front">
-                        <a href="#work">Immersive</a>
-                    </div>
-                    <div class="right">
-                        <a href="#work">Engaging</a>
-                    </div>
-                    <div class="back">
-                        <a href="#work">Responsive</a>
-                    </div>
-                    <div class="left">
-                        <a href="#work">Accessible</a>
-                    </div>
-
-                    <div class="top">
-                        <div class="ballShadow"></div>
-                    </div>
-                    <div class="bottom"></div>
-                </div>
-                <div class="ball io-item"></div>
-            </div>
-        </div> -->
-        <section id="work" class="link-section">
+    
+    <section id="work" class="link-section">
             <div class="work">
                 <div class="work-container">
                     <!-- ITEM 1 -->
@@ -268,7 +243,7 @@
                         <div class="item-flex-container">
                             <div class="item-content">
                                 <figure class="item-image">
-                                    <img src="../img/munch-desk.png" loading="lazy" alt="Munch Up logo">
+                                    <img src="../img/munch_hero.png" width="500" height="273" loading="lazy" alt="Munch Up logo">
                                 </figure>
                             </div>
                             <div class="item-header">
@@ -300,7 +275,7 @@
                         <div class="item-flex-container">
                             <div class="item-content">
                                 <figure class="item-image">
-                                    <img src="../img/thato.png" alt="Thato Sempe logo">
+                                    <img src="../img/thato.png" width="500" height="284" alt="Thato Sempe logo">
                                 </figure>
                             </div>
                             <div class="item-header">
