--- a/index.html
+++ b/index.html
@@ -252,13 +252,7 @@
             <div class="item-content">
               <figure class="item-image">
                 <picture>
-                  <source
-                  srcset="img/orich_650.png"
-                  media="(min-width: 450px)"
-                  width="650"
-                  height="297"
-                  >
-                  <img src="img/orich_350.png" width="350" height="160" alt="Orich Trading & Projects logo">
+                  <img src="img/orich-hero.png" width="350" height="160" alt="Orich Trading & Projects logo">
                 </picture>
               </figure>
             </div>
@@ -291,13 +285,13 @@
             <div class="item-content">
               <figure class="item-image">
                 <picture>
-                  <source
+                  <!-- <source
                   media="(min-width: 450px)"
                   srcset="img/munch_650.png"
                   width="650"
                   height="355"
-                  >
-                  <img src="img/munch_350.png" width="350" height="191" alt="Munch Up logo">
+                  > -->
+                  <img src="img/munch_hero-1000.png" width="350" height="191" alt="Munch Up logo">
                 </picture>
               </figure>
             </div>
@@ -327,13 +321,7 @@
             <div class="item-content">
               <figure class="item-image">
                 <picture>
-                  <source
-                  media="(min-width: 450px)"
-                  srcset="/img/hlavutelo_600.png"
-                  width="600"
-                  height="274"
-                  >
-                  <img src="img/hlavutelo_350.png" width="350" height="159" alt="Hlavutelo Trading & projects">
+                  <img src="img/hlavutelo_600.png" width="350" height="159" alt="Hlavutelo Trading & projects">
                 </picture>
               </figure>
             </div>
