--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 
 <body>
   <!-- LOADER -->
-  <!-- <div class="loader_bg">
+  <div class="loader_bg">
     <div class="spinner">
       <div class="sector sector-1"></div>
       <div class="sector sector-2"></div>
       <div class="sector sector-3"></div>
     </div>
-  </div> -->
+  </div>
   <!-- HEADER -->
   <header id="header" data-header class="header">
     <!-- SKIP TO MAIN LINK -->
@@ -285,13 +285,7 @@
             <div class="item-content">
               <figure class="item-image">
                 <picture>
-                  <!-- <source
-                  media="(min-width: 450px)"
-                  srcset="img/munch_650.png"
-                  width="650"
-                  height="355"
-                  > -->
-                  <img src="img/munch_hero-1000.png" width="350" height="191" alt="Munch Up logo">
+                  <img src="img/munch_hero.png" width="350" height="191" alt="Munch Up logo">
                 </picture>
               </figure>
             </div>
