desktop-hero srcset

--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
       </div>
       <picture class="hero-image">
         <source
-          srcset="/img/hero_1900.jpg"
+          srcset="img/hero_1900.jpg"
           media="(min-width: 820px)"
-          width="1900"
+          width="1920"
           height="1359"
         >
         <img src="img/hero_450.jpg" width="450" height="318" alt="Laptop">
