--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
         </div>
       </div>
       <div class="col-left">
-        <figure class="about-img animated-img">
+        <figure class="about-img">
           <img class="about-img-1" src="img/me-min.jpg" width="450px" height="600" loading="lazy" alt="Boitumelo Shakex Sempe">
           <img class="about-img-2" src="img/shakexblue-min.jpg" width="450px" height="600" loading="lazy" alt="Boitumelo Shakex Sempe">
         </figure>
