--- a/pages/about.html
+++ b/pages/about.html
@@ -202,7 +202,7 @@
                     </div>
                 </div>
                 <div class="col-left">
-                    <figure class="about-img">
+                    <figure class="about-img about-page-img">
                         <img src="../img/me-min.jpg" loading="lazy" alt="Boitumelo Shakex Sempe">
                     </figure>
                 </div>
